; ModuleID = '/home/carl/AnghaBench/tmux/extr_window-copy.c_window_copy_previous_paragraph.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_window-copy.c_window_copy_previous_paragraph.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.window_mode_entry = type { %struct.window_copy_mode_data* }
%struct.window_copy_mode_data = type { i64, i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.window_mode_entry*)* @window_copy_previous_paragraph to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @window_copy_previous_paragraph(%struct.window_mode_entry* %0) #0 {
  %2 = alloca %struct.window_mode_entry*, align 8
  %3 = alloca %struct.window_copy_mode_data*, align 8
  %4 = alloca i64, align 8
  store %struct.window_mode_entry* %0, %struct.window_mode_entry** %2, align 8
  %5 = load %struct.window_mode_entry*, %struct.window_mode_entry** %2, align 8
  %6 = getelementptr inbounds %struct.window_mode_entry, %struct.window_mode_entry* %5, i32 0, i32 0
  %7 = load %struct.window_copy_mode_data*, %struct.window_copy_mode_data** %6, align 8
  store %struct.window_copy_mode_data* %7, %struct.window_copy_mode_data** %3, align 8
  %8 = load %struct.window_copy_mode_data*, %struct.window_copy_mode_data** %3, align 8
  %9 = getelementptr inbounds %struct.window_copy_mode_data, %struct.window_copy_mode_data* %8, i32 0, i32 2
  %10 = load i32, i32* %9, align 8
  %11 = call i64 @screen_hsize(i32 %10)
  %12 = load %struct.window_copy_mode_data*, %struct.window_copy_mode_data** %3, align 8
  %13 = getelementptr inbounds %struct.window_copy_mode_data, %struct.window_copy_mode_data* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = add nsw i64 %11, %14
  %16 = load %struct.window_copy_mode_data*, %struct.window_copy_mode_data** %3, align 8
  %17 = getelementptr inbounds %struct.window_copy_mode_data, %struct.window_copy_mode_data* %16, i32 0, i32 1
  %18 = load i64, i64* %17, align 8
  %19 = sub nsw i64 %15, %18
  store i64 %19, i64* %4, align 8
  br label %20

20:                                               ; preds = %30, %1
  %21 = load i64, i64* %4, align 8
  %22 = icmp sgt i64 %21, 0
  br i1 %22, label %23, label %28

23:                                               ; preds = %20
  %24 = load %struct.window_mode_entry*, %struct.window_mode_entry** %2, align 8
  %25 = load i64, i64* %4, align 8
  %26 = call i64 @window_copy_find_length(%struct.window_mode_entry* %24, i64 %25)
  %27 = icmp eq i64 %26, 0
  br label %28

28:                                               ; preds = %23, %20
  %29 = phi i1 [ false, %20 ], [ %27, %23 ]
  br i1 %29, label %30, label %33

30:                                               ; preds = %28
  %31 = load i64, i64* %4, align 8
  %32 = add nsw i64 %31, -1
  store i64 %32, i64* %4, align 8
  br label %20

33:                                               ; preds = %28
  br label %34

34:                                               ; preds = %44, %33
  %35 = load i64, i64* %4, align 8
  %36 = icmp sgt i64 %35, 0
  br i1 %36, label %37, label %42

37:                                               ; preds = %34
  %38 = load %struct.window_mode_entry*, %struct.window_mode_entry** %2, align 8
  %39 = load i64, i64* %4, align 8
  %40 = call i64 @window_copy_find_length(%struct.window_mode_entry* %38, i64 %39)
  %41 = icmp sgt i64 %40, 0
  br label %42

42:                                               ; preds = %37, %34
  %43 = phi i1 [ false, %34 ], [ %41, %37 ]
  br i1 %43, label %44, label %47

44:                                               ; preds = %42
  %45 = load i64, i64* %4, align 8
  %46 = add nsw i64 %45, -1
  store i64 %46, i64* %4, align 8
  br label %34

47:                                               ; preds = %42
  %48 = load %struct.window_mode_entry*, %struct.window_mode_entry** %2, align 8
  %49 = load i64, i64* %4, align 8
  %50 = call i32 @window_copy_scroll_to(%struct.window_mode_entry* %48, i32 0, i64 %49)
  ret void
}

declare dso_local i64 @screen_hsize(i32) #1

declare dso_local i64 @window_copy_find_length(%struct.window_mode_entry*, i64) #1

declare dso_local i32 @window_copy_scroll_to(%struct.window_mode_entry*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
